feat: add endpoint get products by code
