# src/main/resources/openapi/openapi.yml
@@ -70,6 +70,33 @@ paths:
               schema:
                 $ref: '#/components/schemas/Error'
 
+  /product/codes:
+    post:
+      tags: [product]
+      summary: Get products by code
+      operationId: getProductsByCode
+      requestBody:
+        required: true
+        content:
+          application/json:
+            schema:
+              $ref: '#/components/schemas/ProductCodesRequest'
+      responses:
+        "201":
+          description: Successful operation
+          content:
+            application/json:
+              schema:
+                type: array
+                items:
+                  $ref: '#/components/schemas/ProductResponse'
+        "405":
+          description: Invalid input
+          content:
+            application/json:
+              schema:
+                $ref: '#/components/schemas/Error'
+
   /product/{id}:
     get:
       tags: [product]
@@ -319,7 +346,13 @@ components:
         changeDate:
           type: string
           format: date-time
-
+    ProductCodesRequest:
+      type: object
+      properties:
+        codes:
+          type: array
+          items:
+            type: string
     Error:
       type: object
       properties:
